--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -7352,7 +7352,11 @@ a.uk-thumbnail:focus {
     max-width: calc(100% - 20px);
     /* 3 */
     
-    background: #ffffff;
+    /*background: #ffffff;*/
+    background: url("../images/1.jpg") no-repeat 50% 50%;
+    color: #fff;
+    font-weight: 600;
+    text-align: center;
     /* 4 */
     
     opacity: 0;
@@ -7771,6 +7775,7 @@ a.uk-thumbnail:focus {
     .uk-container {
         max-width: 1200px;
         padding: 0 35px;
+        position: relative;
     }
 }
 /*
@@ -13782,6 +13787,11 @@ ul.uk-navbar-nav:nth-child(2) .uk-dropdown, .content-dropDown .uk-dropdown {
     left: -660px;
 }
 
+#content-DropDownHome .uk-dropdown{
+    left: 0;
+    right: 0;
+}
+
 .content-dropDown-left .uk-dropdown{left: 0;}
 
 .whitemenu .uk-dropdown-width-5,
@@ -17001,7 +17011,7 @@ pre code {
 
 .outsourcing-logo {
     width: 100px;
-    float: right;
-    margin-right: 300px;
-    margin-top: 40px;
+    position: absolute;
+    top: 58px;
+    right: 30px;
 }
